--- a/about.html
+++ b/about.html
@@ -40,19 +40,31 @@
             <div class="apresentacao__informacoes">
                 <h2>Detalhes</h2>
                 <ul>
-                    <div class="card_div">Nome: Igor Natan Bonates Oliveira de Souza</div>
-                    <div class="card_div">Idade: 24 anos</div>
-                    <div class="card_div">Ocupação: Desenvolvedor Web</div>
-                    <div class="card_div">Cidade: Manaus-Am</div>
+                    <div class="card_div"><strong>Nome:</strong> Igor Natan Bonates Oliveira de Souza</div>
+                    <div class="card_div"><strong>Idade:</strong> 24 anos</div>
+                    <div class="card_div"><strong>Ocupação:</strong> Desenvolvedor Web</div>
+                    <div class="card_div"><strong>Cidade:</strong> Manaus-Am</div>
                 </ul>
                 <h2>Skills</h2>
+
                 <ul class="apresentacao__card__lista">
-                    <div class="card_div">HTML5</div>
-                    <div class="card_div">CSS3</div>
-                    <div class="card_div">JavaScript</div>
-                    <div class="card_div">TypeScript</div>
-                    <div class="card_div">Node.js</div>
-                    <div class="card_div">postgreSQL</div>
+                    <div class="card_div" class="card__skil
+                    " >HTML5</div>
+
+                    <div class="card_div"class="card__skil
+                    ">CSS3</div>
+
+                    <div class="card_div"class="card__skil
+                    ">JavaScript</div>
+
+                    <div class="card_div"class="card__skil
+                    ">TypeScript</div>
+
+                    <div class="card_div"class="card__skil
+                    ">Node.js</div>
+                    
+                    <div class="card_div"class="card__skil
+                    ">postgreSQL</div>
                 </ul>
 
         </section>
