--- a/project.html
+++ b/project.html
@@ -18,27 +18,32 @@
             <a href="./project.html" class="cabecalho__menu__link" target="_self">Projetos</a>
         </nav>
     </header>
-    <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Projeto 1</h1>
-            <p class="apresentacao__conteudo__texto">
-                Olá, tudo bem?
 
-            <p class="apresentacao__conteudo__texto">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto sit provident blanditiis, nulla ut, nam dolorem culpa id quisquam deserunt possimus cumque illum laudantium accusamus harum exercitationem et. Amet, incidunt.
-            </p>
-        </section>
 
-        <section class="apresentacao__conteudo">
-            <h2 class="apresentacao__conteudo__titulo">Projeto 2</h2>
+<main class="apresentacao">
+    <section class="apresentacao__conteudo_projeto">
 
-            <p class="apresentacao__conteudo__texto">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus labore ullam asperiores tempora, maxime quisquam at totam impedit mollitia odit, fugit ipsam quo vitae? Recusandae, at? Facilis corporis culpa saepe.
-            </p>
+        <img  src="./img/projeto-num-aleatório.png" alt="Projeto jogo do número aleatório">
+        <div class="apresentacao__conteudo__texto" class="">
+            <h2>Jogo do número secreto</h2>
+            <p>O jogo é tentar descobrir o número secréto que vai ser aleatório.</p>
+            <div class="tecnologias">
 
-        </section>
-        <img class="apresentacao__imagem" src="" alt="">
-    </main>
+                <span>Tecnologias:</span>
+                
+                <p>
+                    <abbr title="HTML5"><img class="icon" src="./img/icone-html.png" alt="HTML"></abbr>
+                    <abbr title="CSS3"><img class="icon" src="./img/icone-css3.png" alt="CSS"></abbr>
+                    <abbr title="JavaScript"><img class="icon" src="./img/icone-javaScript.png" alt="JavaScript"></abbr>
+                </p>
+            </div>
+            <div><a href="https://b0nates.github.io/jogo-num-secreto/" target="_blank" class="projeto_link">Experimente</a></div>
+        </div>
+    </section>
+
+
+</main>
+
 
     <footer class="rodape">
         Desenvolvido por Igor Bonates
